more boring stuff

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -17,6 +17,8 @@
 			<button id='real'>I trust this news!</button></br>
 			<button id='fake'>This news is fake!</button></br></br>
 			<button id='can_trust'>Can I trust it?</button></br>
+			<div id='results'>
+			</div>
 			<script src="popup.js"></script>
 		</div>
 	</body>
