--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,9 +11,9 @@
     }
 </style>
 	</head>
-	<body>
+	<body align="center">
 		<div align="center">
-			<img src='logo.png' width='100px'>
+			<img src='logo.png' width='100px'></br>
 			<button id='real'>I trust this news!</button></br>
 			<button id='fake'>This news is fake!</button></br></br>
 			<button id='can_trust'>Can I trust it?</button></br>
