--- a/extension/popup.html
+++ b/extension/popup.html
@@ -20,6 +20,7 @@
 			<div id='results'>
 			</div>
 			<script src="popup.js"></script>
+			<script src="openpgpjs/dist/openpgp.min.js"></script>
 		</div>
 	</body>
 </html>
