--- a/extension/popup.html
+++ b/extension/popup.html
@@ -22,7 +22,7 @@
 			<div id='buttons'>
 			<button id='real' style="background-color: #4CAF50">I trust this! &#128077;</button></br>
 			<button id='fake' style="background-color: #f44336">This is fake! &#128078;</button></br>
-			<button id='can_trust' style="background-color: #008CBA">Can I trust it?</button></br></br>
+			<button id='can_trust' style="background-color: #008CBA">Can I trust this?</button></br></br>
 			</div>
 			<div id='results'>
 			</div>
