--- a/extension/popup.html
+++ b/extension/popup.html
@@ -50,7 +50,7 @@
 		<div align="center">
 			<img src='logo.png' width='100px'></br>
 			<div id='buttons'>
-			<button id='real' style="background-color: #4CAF50">I trust this! &#128077;</button>
+			<button id='real' style="background-color: #4CAF50">This is truth! &#128077;</button>
 			<button id='fake' style="background-color: #f44336">This is fake! &#128078;</button>
 			<button id='can_trust' style="background-color: #008CBA">Can I trust this?</button>
 			</div>
